<resources>
    <string name="app_name">ShareD</string>
    <string name="ShareD">ShareD</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="SplashScreenActivity">Splash Screen Activity</string>
    <string name="ForgotPassword">Forgot Password? Click Here</string>
    <string name="choose_file">Choose a CSV file to upload from...</string>
    <string name="choose">Choose</string>
    <string name="importBtn">Import</string>
    <string name="description1">The Rotary movement in Belgaum began with the formation of Rotary Club of Belgaum on the 5th of December 1941, with 18 members. Ours is the second oldest club of the RI District 3170, and also a leading club engaged in Community, Vocational and International service. After 77 years of continuous community service, our club has 93 members. There is a perfect mix of wisdom, maturity, youth and energy. This gives us immense courage and confidence to take up most challenging tasks.Let it be fellowship, leadership or a service project .</string>
    <string name="the_rotary_club_of_belgaum">The Rotary Club of Belgaum</string>
    <string name="about_annotsav">About Annotsav</string>
    <string name="description2">Annotsav The Food Festival, Consumex with Auto Expo Rotary Club of Belgaum is organizing Belgaum\'s Mega Event Annotsav for last 17 years. The Annotsav is organized at the CPEd Grounds, Camp, Belgaum (Opp Belgaum Club). This event has a 3 fold purpose: 1. To raise funds for community Service Projects. 2. To give an opportunity to the amateur as well as professional caterers to reach a wide audience. 3. To give Belgaumite’s a unique opportunity to taste variety of delicacies at one place and to entertain the entire family for 9 days.</string>
    <string name="logoDescription">IBM Logo</string>
    <string name="title_activity_maps_view">MapsView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_call_in_a_favour">Call In a Favour</string>
    <string name="menu_my_requests">My Requests</string>
    <string name="menu_my_contributions">My Contributions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="menu_home_second">Home Second</string>




    <!-- FCM Related Strings -->
    <string name="data_type">data_type</string>
    <string name="direct_message">direct_message</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>

    <!-- Bundle Extras -->
    <string name="intent_user_id">intent_user_id</string>

    <!-- Dialog Names -->
    <string name="dialog_message">dialog_message</string>

    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">Users</string>
    <string name="dbnode_messages">messages</string>

    <!-- Firebase Database Fields -->
    <string name="field_message">message</string>
    <string name="field_user_id">user_id</string>
    <string name="field_messaging_token">messaging_token</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_location_based_channel">Subscribe To LocationBasedChannel</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to LocationBased topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">LocationBasedChannel</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to LocationBasedChannel topic</string>
    <string name="fcm_message">FCM Message</string>
</resources>
